Modificados titulos a moodhack, mejoras en seeds

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,7 +26,7 @@ en:
     end: Let's start!
 
 # devise/sessions/new
-  sign_in: Sign into Brimir
+  sign_in: Sign in
 
 # devise/shared/links
   forgot_password: Forgot your password?
